<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_nanodegree_apps"
            android:layout_marginBottom="24dp"
            android:textAppearance="@android:style/TextAppearance.Large"/>

        <Button
            android:id="@+id/spotify_streamer"
            android:layout_width="250dp"
            android:layout_height="64dp"
            android:text="@string/spotify_streamer"
            android:onClick="onButtonClicked"
            />

        <Button
            android:id="@+id/scores_app"
            android:layout_width="250dp"
            android:layout_height="64dp"
            android:text="@string/scores_app"
            android:onClick="onButtonClicked"
            />

        <Button
            android:id="@+id/library_app"
            android:layout_width="250dp"
            android:layout_height="64dp"
            android:text="@string/library_app"
            android:onClick="onButtonClicked"
            />

        <Button
            android:id="@+id/build_it_bigger"
            android:layout_width="250dp"
            android:layout_height="64dp"
            android:text="@string/build_it_bigger"
            android:onClick="onButtonClicked"
            />

        <Button
            android:id="@+id/xyz_reader"
            android:layout_width="250dp"
            android:layout_height="64dp"
            android:text="@string/xyz_reader"
            android:onClick="onButtonClicked"
            />

        <Button
            android:id="@+id/capstone"
            android:layout_width="250dp"
            android:layout_height="64dp"
            android:text="@string/capstone"
            android:textColor="#ffffff"
            android:onClick="onButtonClicked"
            />

    </LinearLayout>
</ScrollView>